Finish with section 2

--- a/index.html
+++ b/index.html
@@ -30,6 +30,32 @@
         </div>
       </div>
     </div>
+ 
+    <div class="section2">
+
+      <div class="section2-container1">
+        <div>Some random information.</div>
+      </div>
+      <div class="section2-container2">
+        <div class="section2-container2a">
+          <img class="image2" src="images/image2.jpg" alt="city skyline">
+          <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="section2-container2a">
+          <img class="image2" src="images/image3.jpg" alt="city skyline">
+          <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="section2-container2a">
+          <img class="image2" src="images/image4.jpg" alt="city skyline">
+          <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="section2-container2a">
+          <img class="image2" src="images/image5.jpg" alt="city skyline">
+          <div>this is some subtext under an illustration or image</div>
+        </div>
+      </div>
+      
+    </div>
 
   </body>
 </html>
