--- a/index.html
+++ b/index.html
@@ -57,5 +57,12 @@
       
     </div>
 
+    <div class="section3">
+      <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
+        people will actually read it . Who knows? All i know is that it looks nice.
+      </div>
+      <div class="thor">-Thor, God of Thunder </div>
+    </div>   
+
   </body>
 </html>
