--- a/index.html
+++ b/index.html
@@ -79,5 +79,8 @@
       </div>
     </div>
 
+    <div class="footer">
+      <div>copyright @ The Odin Project 2022</div>
+    </div>
   </body>
 </html>
